--- a/guestbook.csproj
+++ b/guestbook.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="MySql.Data.Core" Version="7.0.4-ir-191" />
   </ItemGroup>
 
 </Project>
